<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sunlands.intl.yingshi.ui.my.view.ChangePasswordActivity">

    <include layout="@layout/layout_common_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginBottom="@dimen/margin_14dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_70dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_14dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:src="@drawable/ic_lock"/>

        <EditText
            android:id="@+id/et_old_pwd"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/old_password"
            android:textColor="@color/text333"
            android:textColorHint="@color/text999"
            android:maxLength="12"
            android:textSize="@dimen/text_17sp"/>
        <!--android:textCursorDrawable="@drawable/shape_cursor"-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginBottom="@dimen/margin_14dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_14dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:src="@drawable/ic_lock"/>

        <EditText
            android:id="@+id/et_new_pwd"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:maxLength="12"
            android:textColor="@color/text333"
            android:textColorHint="@color/text999"
            android:textSize="@dimen/text_17sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginBottom="@dimen/margin_14dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/size_20"
            android:layout_height="@dimen/size_20"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_14dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:src="@drawable/ic_lock"/>

        <EditText
            android:id="@+id/et_ensure_pwd"
            style="@style/PasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/ensure_password"
            android:maxLength="12"
            android:textColor="@color/text333"
            android:textColorHint="@color/text999"
            android:textSize="@dimen/text_17sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_60dp"
        android:background="@drawable/shape_btn_enter_class"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17sp"/>

</LinearLayout>
