<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_100dp"
    android:layout_marginEnd="@dimen/margin_10dp"
    android:layout_marginStart="@dimen/margin_10dp"
    android:layout_marginTop="@dimen/margin_14dp"
    android:orientation="horizontal">


    <FrameLayout
        android:id="@+id/fl_file"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.53"
        android:background="@drawable/bg_item_exam_arrange_white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/padding_12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_with_colon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

                <TextView
                    android:id="@+id/tv_subject_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pager_title"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_pager_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="@dimen/text_14sp" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>

    <RelativeLayout

        android:id="@+id/ll_jiexi"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_item_exam_arrange_black"
        android:gravity="center"
        android:padding="@dimen/padding_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/view_paper_analyse"
            android:textColor="@color/textColorGolden"
            android:textSize="@dimen/text_14sp" />


    </RelativeLayout>

</LinearLayout>