<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgGrayF4"
    android:orientation="vertical">

    <include layout="@layout/layout_common_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_12dp"
            android:paddingEnd="@dimen/padding_12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_28dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:text="@string/apply_data"
                android:textColor="@color/text333"
                android:textSize="@dimen/text_20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/padding_12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_degree"
                    android:textColor="@color/text333"
                    android:textSize="@dimen/text_16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:layout_marginBottom="@dimen/margin_6dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rg_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_undergraduate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:button="@null"
                            android:checked="true"
                            android:drawableStart="@drawable/selector_cb"
                            android:drawablePadding="@dimen/margin_10dp"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_8dp"
                            android:text="@string/international_undergraduate"
                            android:textColor="@color/text999" />

                        <RadioButton
                            android:id="@+id/rb_master"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:button="@null"
                            android:drawableStart="@drawable/selector_cb"
                            android:drawablePadding="@dimen/margin_10dp"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_8dp"
                            android:text="@string/international_master"
                            android:textColor="@color/text999" />

                        <RadioButton
                            android:id="@+id/rb_doctor"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:button="@null"
                            android:drawableStart="@drawable/selector_cb"
                            android:drawablePadding="@dimen/margin_10dp"
                            android:gravity="center_vertical"
                            android:padding="@dimen/padding_8dp"
                            android:text="@string/international_doctor"
                            android:textColor="@color/text999" />


                    </RadioGroup>

                    <!-- <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         app:layout_constraintStart_toStartOf="parent">

                         <ImageView
                             android:id="@+id/iv_undergraduate"
                             android:layout_width="@dimen/size_16"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:scaleType="center"
                             android:src="@drawable/selector_cb"
                             />

                         <CheckBox
                             android:id="@+id/cb_undergraduate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:button="@null"
                             android:padding="@dimen/padding_8dp"
                             android:text="@string/international_undergraduate"
                             android:textColor="@color/text999"
                             />

                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent">

                         <ImageView
                             android:id="@+id/iv_master"
                             android:layout_width="@dimen/size_16"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:scaleType="center"
                             android:src="@drawable/selector_cb"
                             />

                         <CheckBox
                             android:id="@+id/cb_master"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:button="@null"
                             android:padding="@dimen/padding_8dp"
                             android:text="@string/international_master"
                             android:textColor="@color/text999"
                             />


                     </LinearLayout>

                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent">

                         <ImageView
                             android:id="@+id/iv_doctor"
                             android:layout_width="@dimen/size_16"
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:scaleType="center"
                             android:src="@drawable/selector_cb"
                             />

                         <CheckBox
                             android:id="@+id/cb_doctor"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:button="@null"
                             android:padding="@dimen/padding_8dp"
                             android:text="@string/international_doctor"
                             android:textColor="@color/text999"
                             />

                     </LinearLayout>-->


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_14dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingStart="@dimen/padding_14dp"
                android:paddingTop="@dimen/padding_20dp"
                android:paddingEnd="@dimen/padding_14dp"
                android:paddingBottom="@dimen/padding_14dp">

                <LinearLayout
                    android:id="@+id/ll_choose_university"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_et_apply"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_choose_university"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_40dp"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/choose_college"
                        android:paddingStart="@dimen/padding_14dp"
                        android:paddingEnd="@dimen/padding_14dp"
                        android:textColor="@color/text333"
                        android:textColorHint="@color/text999"
                        android:textSize="@dimen/text_14sp" />

                    <ImageView
                        android:layout_width="@dimen/size_16"
                        android:layout_height="@dimen/size_16"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/margin_6dp"
                        android:src="@drawable/ic_triangle_expand" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_14dp"
                android:layout_marginBottom="@dimen/margin_20dp"
                android:background="@color/white"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_14dp"
                android:paddingTop="@dimen/padding_20dp"
                android:paddingEnd="@dimen/padding_14dp"
                android:paddingBottom="@dimen/padding_14dp">

                <EditText
                    android:id="@+id/et_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_your_real_name"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp"
                    android:textColor="@color/text333"
                    android:textColorHint="@color/text999"
                    android:textSize="@dimen/text_14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_marginEnd="@dimen/margin_14dp"
                        android:layout_marginBottom="@dimen/margin_6dp"
                        android:background="@drawable/shape_phone_location"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/padding_8dp"
                        android:paddingEnd="@dimen/padding_8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="@dimen/margin_4dp"
                            android:text="+86"
                            android:textColor="@color/text999"
                            android:textSize="@dimen/text_12sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_triangle_phone" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_phone_number"
                        style="@style/PhoneNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_40dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:hint="@string/please_input_phone_number"
                        android:textColor="@color/text333"
                        android:textColorHint="@color/text999"
                        android:textSize="@dimen/text_14sp" />


                </LinearLayout>

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:gravity="center_vertical"
                    android:hint="@string/city"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp"
                    android:textColor="@color/text333"
                    android:textColorHint="@color/text999"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/et_highest_degree"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:gravity="center_vertical"
                    android:hint="@string/highest_degree"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp"
                    android:textColor="@color/text333"
                    android:textColorHint="@color/text999"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/et_work_engage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:gravity="center_vertical"
                    android:hint="@string/work_engage"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp"
                    android:textColor="@color/text333"
                    android:textColorHint="@color/text999"
                    android:textSize="@dimen/text_14sp" />

                <EditText
                    android:id="@+id/et_type_of_position"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_40dp"
                    android:layout_marginBottom="@dimen/margin_14dp"
                    android:background="@drawable/shape_et_apply"
                    android:gravity="center_vertical"
                    android:hint="@string/type_of_position"
                    android:paddingStart="@dimen/padding_14dp"
                    android:paddingEnd="@dimen/padding_14dp"
                    android:textColor="@color/text333"
                    android:textColorHint="@color/text999"
                    android:textSize="@dimen/text_14sp" />

                <TextView
                    android:id="@+id/tv_apply_now"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_60dp"
                    android:background="@drawable/bg_btn_apply"
                    android:gravity="center_horizontal|top"
                    android:paddingTop="@dimen/padding_10dp"
                    android:text="@string/apply_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16sp" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>